--- a/css/main.css
+++ b/css/main.css
@@ -986,17 +986,127 @@
     padding-right: 15px !important;
     padding-left: 15px !important;
   }
+  .tokenomiks {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .tokenomiks {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .tokenomiks_col_item_title {
+    font-size: 25px !important;
+  }
+  .tokenomiks_wrapper {
+    display: none !important;
+  }
+  .tokenomiks_col2 {
+    margin: 50px auto !important;
+    width: 100% !important;
+  }
+  .tokenomiks_wrapper_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mobile_tokenomiks_graphic {
+    margin: 50px auto 0;
+    width: 94%;
+  }
+  .tokenomiks_col_item {
+    margin: 0 25px;
+  }
+  .tokenomiks_col_item:hover {
+    -webkit-transform: scale(1) !important;
+            transform: scale(1) !important;
+  }
+  .tokenomiks_wrapper {
+    display: none !important;
+  }
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
   .tokenomiks {
     padding-right: 15px !important;
     padding-left: 15px !important;
   }
+  .tokenomiks {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .tokenomiks_wrapper {
+    display: none !important;
+  }
+  .tokenomiks_col2 {
+    margin: 50px auto !important;
+  }
+  .tokenomiks_wrapper_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mobile_tokenomiks_graphic {
+    margin: 50px auto 0;
+    width: 94%;
+  }
+  .tokenomiks_col_item {
+    margin: 0 25px;
+  }
+  .tokenomiks_col_item:hover {
+    -webkit-transform: scale(1) !important;
+            transform: scale(1) !important;
+  }
+  .tokenomiks_wrapper {
+    display: none !important;
+  }
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .tokenomiks {
     padding-right: 15px !important;
     padding-left: 15px !important;
+  }
+  .tokenomiks_wrapper {
+    display: none !important;
+  }
+  .tokenomiks_col2 {
+    margin: 50px auto !important;
+  }
+  .tokenomiks_wrapper_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mobile_tokenomiks_graphic {
+    margin: 50px auto 0;
+    width: 100%;
+    max-width: 724px;
+  }
+  .tokenomiks_col_item {
+    margin: 0 25px;
+  }
+  .tokenomiks_col_item:hover {
+    -webkit-transform: scale(1) !important;
+            transform: scale(1) !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1199.98px) {
@@ -1010,6 +1120,9 @@
         -ms-flex-direction: column;
             flex-direction: column;
     max-width: 100% !important;
+  }
+  .tokenomiks_wrapper_mobile {
+    display: none !important;
   }
   .tokenomiks_col2 {
     margin: 50px auto !important;
@@ -1034,6 +1147,38 @@
   }
 }
 @media (min-width: 1200px) and (max-width: 1399.98px) {
+  .tokenomiks_wrapper_mobile {
+    display: none !important;
+  }
+  .element-animation {
+    /* Скроем элемент в начальном состоянии */
+    opacity: 0;
+  }
+  .element-show {
+    opacity: 1;
+    -webkit-transition: opacity 1s !important;
+    transition: opacity 1s !important;
+  }
+}
+@media (min-width: 1400px) {
+  .tokenomiks_wrapper_mobile {
+    display: none !important;
+  }
+  .element-animation {
+    /* Скроем элемент в начальном состоянии */
+    opacity: 0;
+  }
+  .element-show {
+    opacity: 1;
+    -webkit-transition: opacity 1s !important;
+    transition: opacity 1s !important;
+  }
+  .tokenomiks {
+    padding-right: 30px !important;
+    padding-left: 30px !important;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1499.98px) {
   .tokenomiks {
     padding-right: 15px !important;
     padding-left: 15px !important;
@@ -1065,30 +1210,6 @@
   }
   .tokenomiks_col .tokenomiks_col_item {
     max-width: 515px;
-  }
-  .element-animation {
-    /* Скроем элемент в начальном состоянии */
-    opacity: 0;
-  }
-  .element-show {
-    opacity: 1;
-    -webkit-transition: opacity 1s !important;
-    transition: opacity 1s !important;
-  }
-}
-@media (min-width: 1400px) {
-  .element-animation {
-    /* Скроем элемент в начальном состоянии */
-    opacity: 0;
-  }
-  .element-show {
-    opacity: 1;
-    -webkit-transition: opacity 1s !important;
-    transition: opacity 1s !important;
-  }
-  .tokenomiks {
-    padding-right: 30px !important;
-    padding-left: 30px !important;
   }
 }
 html,
