--- a/css/_media.scss
+++ b/css/_media.scss
@@ -1295,6 +1295,10 @@ body {
 // Intro
 
 @media (min-width: 320px) and (max-width: 575.98px) {
+    .accordion{
+        padding-right: 17px !important;
+        padding-left: 17px !important;
+    }
    .accordion-list {
       h3 {
          font-size: 16px !important;
@@ -1310,6 +1314,10 @@ body {
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
+    .accordion{
+        padding-right: 17px !important;
+        padding-left: 17px !important;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
