--- a/css/main.scss
+++ b/css/main.scss
@@ -1233,7 +1233,6 @@ h1 {
    gap: 20px;
 }
 
-
 ul.accordion-list {
    position: relative;
    display: block;
@@ -1257,7 +1256,7 @@ ul.accordion-list {
       &.active {
          h3 {
             span {
-               transform: rotate(180deg);
+               transform: rotate(-180deg);
             }
          }
       }
@@ -1276,9 +1275,8 @@ ul.accordion-list {
          padding: 0 0 0 0;
          margin: 0;
          cursor: pointer;
-         span{
+         span {
             transition: 0.5s;
-
          }
 
          //  &:after {
@@ -1308,7 +1306,7 @@ ul.accordion-list {
             font-family: $font_600;
             font-size: 18px;
             line-height: 24px;
-            opacity: .5;
+            opacity: 0.5;
             color: #ffffff;
             padding: 10px 0 0 0;
             cursor: pointer;
@@ -1316,4 +1314,169 @@ ul.accordion-list {
          }
       }
    }
+}
+
+.footer {
+   padding: 70px 0 0;
+   background: url(../img/Footer/bg.png);
+   position: relative;
+   .section_title {
+      max-width: 530px;
+      margin: auto;
+   }
+}
+.footer_wrapper {
+   width: 100%;
+   max-width: 848px;
+   margin: 50px auto 176px;
+   text-align: center;
+}
+.footer_icons {
+   display: flex;
+   gap: 30px;
+}
+.footer_icons_item {
+   background: #e11d2e;
+   border-radius: 15px;
+   width: 60px;
+   height: 60px;
+   transition: 0.7s;
+   cursor: pointer;
+   * {
+      cursor: pointer;
+   }
+}
+.footer_icons_item1 {
+   padding: 30px 25px;
+
+   &:hover {
+      .img_bg1 {
+         background: url(../img/Footer/1_blue.svg);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.footer_icons_item2 {
+   padding: 30px 25px 30px 24px;
+
+   &:hover {
+      .img_bg2 {
+         background: url(../img/Footer/2_blue.svg);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.footer_icons_item3 {
+   padding: 30px;
+
+   &:hover {
+      .img_bg3 {
+         background: url(../img/Footer/3_dark.svg);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.footer_icons_item4 {
+   padding: 30px;
+
+   &:hover {
+      .img_bg4 {
+         background: url(../img/Footer/4_blue.svg);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.footer_icons_item5 {
+   padding: 30px;
+
+   &:hover {
+      .img_bg5 {
+         background: url(../img/Footer/5.svg);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.footer_icons_item6 {
+   padding: 30px;
+
+   &:hover {
+      .img_bg6 {
+         background: url(../img/Footer/666.png);
+         background-repeat: no-repeat;
+      }
+   }
+}
+.img_bg {
+   transition: 0.7s;
+   background-repeat: no-repeat;
+}
+.img_bg1 {
+   background: url(../img/Footer/1telegram.svg);
+   width: 32px;
+   height: 26.67px;
+}
+.img_bg2 {
+   background: url(../img/Footer/2twitter.svg);
+   width: 32.78px;
+   height: 26.67px;
+}
+.img_bg3 {
+   background: url(../img/Footer/3reddit.svg);
+   width: 26.67px;
+   height: 26.67px;
+}
+.img_bg4 {
+   background: url(../img/Footer/4facebook.svg);
+   width: 26.67px;
+   height: 26.67px;
+}
+.img_bg5 {
+   background: url(../img/Footer/5m.svg);
+   width: 26.67px;
+   height: 26.67px;
+}
+.img_bg6 {
+   background: url(../img/Footer/6intagram.svg);
+   width: 26.67px;
+   height: 26.67px;
+}
+
+.footer_cat {
+   margin-top: 80px;
+   margin-bottom: 50px;
+}
+.footer_hach_code {
+   background: rgba(0, 0, 0, 0.3);
+   border-radius: 50px;
+   padding: 23px 56px 22px;
+   width: 100%;
+   max-width: 699px;
+   margin: auto;
+   text-align: left;
+}
+.footer_hach_code_title {
+   font-family: $font_500;
+   font-size: 15px;
+   line-height: 18px;
+   color: rgba(255, 255, 255, 0.4);
+   margin-bottom: 5px;
+}
+.footer_hach_code_text {
+   font-family: $font_400;
+   font-size: 25px;
+   line-height: 30px;
+   color: rgba(255, 255, 255, 0.8);
+}
+.footer_info {
+   background: #0d1428;
+   padding: 40px 16px;
+   width: 100%;
+   text-align: center;
+}
+.footer_info_text {
+   font-family: $font_400;
+   font-size: 20px;
+   line-height: 24px;
+   color: #ffffff;
+   opacity: 0.4;
 }
