--- a/css/main.scss
+++ b/css/main.scss
@@ -523,6 +523,9 @@ h1 {
 }
 .how_it_works_wrapper {
    position: relative;
+    .partners_icons_item{
+        opacity: 0.25;
+    }
 }
 .img_red {
    left: 30%;
